2010-05-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c: delete OCI8::Metadata::Base's methods which
	    get and set OCI handle attributes.
	* ext/oci8/ocihandle.c: add OCIHandle#attr_get_oradate.
	* lib/oci8/metadata.rb: use OCIHandle#attr_get_* instead of
	    obsolete OCI8::Metadata::Base#__*.

2010-05-07  KUBO Takehiro  <kubo@jiubao.org>
	* dist-files, ext/oci8/.document, ext/oci8/apiwrap.yml,
	  ext/oci8/connection_pool.c, ext/oci8/extconf.rb,ext/oci8/oci8.c,
	  ext/oci8/oci8.h, ext/oci8/oci8lib.c, lib/oci8.rb.in,
	  lib/oci8/.document, lib/oci8/connection_pool.rb, lib/oci8/oci8.rb,
	  lib/oci8/ocihandle.rb: add a new feature OCI8::ConnectionPool.

2010-05-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c: fix a bug that a string is bound to RAW,
	    its encoding was convertd to OCI.encoding.
	* ext/oci8/encoding.c: delete an unused strcuture.
	* ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/ocihandle.c,
	    lib/oci8/oci8.rb: do refactering to make it easy to
	    implement new authentication features.
	* lib/oci8.rb.in, lib/oci8/metadata.rb, lib/oci8/ocihandle.rb:
	    move constant definitions from metadata.rb to ocihandle.rb.

2010-05-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/oci8.h, lib/oci8/bindtype.rb:
	    change the length semantics from byte to char for string
	    bind variables when the Oracle client is 9i or upper.

2010-05-02  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/encoding-init.rb: fix for zero-length NLS_LANG.
	    fix AL32UTF8's nls_ratio.
	* ext/oci8/stmt.c: fix SEGV when an exception is raised in
	    post_bind_hook().

2010-04-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/object.c, ext/oci8/oci8.h,
	  ext/oci8/stmt.c: refactor code to prepare character length
	    semantics support.

2010-04-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/encoding.c: add new methods OCI8.nls_ratio
	    and OCI8.nls_ratio=. Comments for rdoc are added and